# rag7

./: .env.example  .gitignore  README.md  docker-compose.test.yml  pyproject.toml  pyrightconfig.json  zensical.toml
.github/workflows/: ci.yml  workflow.yml
bench/: combined.py  llm_calls.py
docs/: async.md  auto-strategy.md  auto-tuning.md  backends.md  changelog.md  collections.md  configuration.md  examples.md  filtering.md  index.md  memory.md  quickstart.md  reranking.md  tracing.md
docs/assets/: extra.css
examples/: mem0_postgres_memory.py
rag7/: __init__.py  _cache.py  backend.py  cli.py  config.py  core.py  dataset_builder.py  embed_anything.py  embedder.py  factory.py  intent_filter_mixin.py  memory_mixin.py  models.py  prompts.py  rerankers.py  schema_introspect.py  tools.py  tuner.py  utils.py
rag7/helpers/: disk_cache.py  render.py  schema_introspect.py
rag7/mixins/: filter_detection.py  intent_filter.py  memory.py
scripts/: autoresearch_measure.sh  bench_speed.py  ingest.py  populate_backends.py  setup_azure_search.py
tests/: bench_latency.py  eval_report.py  generate_fake_data.py  test_alternative_search.py  test_backends.py  test_embed_anything.py  test_fast_keyword_path.py  test_filter.py  test_invoke_async_reentry.py  test_ir_benchmarks.py  test_low_confidence_swarm.py  test_memory_postgres.py  test_mteb_benchmark.py  test_mteb_ci.py  test_multi_backend_rebind.py  test_multi_collection.py  test_retrieval.py  test_run_sync.py  test_top1_gate.py
tests/eval_v2/: __main__.py  adversarial.py  generate.py  graph_hard.py  graph_quick.py  paraphrases.json  run_tuner.py  runner.py
